@@ -49,7 +49,7 @@ void DirectoryIteratorsTest::testDirectoryIterator()
 		result.push_back(file);
 	}
 
-	assertEquals(7, result.size());
+	assertEquals(7, (long) result.size());
 }
 
 
@@ -68,7 +68,7 @@ void DirectoryIteratorsTest::testSortedDirectoryIterator()
 		result.push_back(file);
 	}
 
-	assertEquals(7, result.size());
+	assertEquals(7, (long) result.size());
 	assertEquals("first", result[0]);
 	assertEquals("1", result[1]);
 	assertEquals("2", result[2]);
@@ -94,7 +94,7 @@ void DirectoryIteratorsTest::testSimpleRecursiveDirectoryIterator()
 		result.push_back(file);
 	}
 
-	assertEquals(20, result.size());
+	assertEquals(20, (long) result.size());
 }
 
 
@@ -113,7 +113,7 @@ void DirectoryIteratorsTest::testSiblingsFirstRecursiveDirectoryIterator()
 		result.push_back(file);
 	}
 
-	assertEquals(20, result.size());
+	assertEquals(20, (long) result.size());
 }
 
 
